updated az-303 study guide

--- a/content/study_guides/Azure/AZ-303.md
+++ b/content/study_guides/Azure/AZ-303.md
@@ -7,7 +7,7 @@ weight: 20
 ## AZ-303
 
 ---
-Last updated: 11/03/2020
+Last updated: 16/03/2020
 
 ---
 
@@ -28,7 +28,32 @@ https://www.udemy.com/course/70534-azure/
 
 Below you will find a list of **free** resources from Microsoft on their Microsoft Learn site.
 
-Need links!
+Architect great solutions in Azure \
+https://docs.microsoft.com/learn/paths/architect-great-solutions-in-azure
+
+Architect network infrastructure in Azure \
+https://docs.microsoft.com/learn/paths/architect-network-infrastructure
+
+Architect a data platform in Azure \
+https://docs.microsoft.com/learn/paths/architect-data-platform
+
+Architect storage infrastructure in Azure \
+https://docs.microsoft.com/learn/paths/architect-storage-infrastructure
+
+Architect compute infrastructure in Azure \
+https://docs.microsoft.com/learn/paths/architect-compute-infrastructure
+
+Architect infrastructure operations in Azure \
+https://docs.microsoft.com/learn/paths/architect-infrastructure-operations
+
+Architect migration, business continuity, and disaster recovery in Azure \
+https://docs.microsoft.com/learn/paths/architect-migration-bcdr
+
+Architect modern applications in Azure \
+https://docs.microsoft.com/learn/paths/architect-modern-apps
+
+Architect secure infrastructure in Azure \
+https://docs.microsoft.com/learn/paths/architect-secure-infrastructure
 
 ---
 
@@ -46,70 +71,76 @@ https://docs.microsoft.com/en-us/learn/certifications/exams/az-303
 ### Implement cloud infrastructure monitoring
 
 Monitor security \
-link
+https://docs.microsoft.com/en-us/azure/security-center/security-center-monitoring
+https://docs.microsoft.com/en-us/azure/security/benchmarks/security-control-logging-monitoring
+https://docs.microsoft.com/en-us/azure/security/fundamentals/infrastructure-monitoring
 
 Monitor performance 
 
 Configure diagnostic settings on resources \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/diagnostic-settings
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/diagnostic-settings-template
 
 Create a performance baseline for resources \
-link
+https://docs.microsoft.com/en-us/rest/api/monitor/metricbaseline/get
 
 Monitor for unused resources \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/overview
 
 Monitor performance capacity \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/workbooks-overview
 
 Visualize diagnostics data using Azure Monitor \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/workbooks-visualizations
 
 Monitor health and availability 
 
 Monitor networking \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/insights/network-insights-overview
 
 Monitor service health \
-link
+https://azure.microsoft.com/en-us/features/service-health
 
 Monitor cost
 
 Monitor spend\
-link
+https://docs.microsoft.com/en-us/azure/architecture/framework/cost/monitoring
+https://docs.microsoft.com/en-us/azure/cost-management-billing/costs/cost-mgt-alerts-monitor-usage-spending
 
 Report on spend \
-link
+https://docs.microsoft.com/en-us/azure/cost-management-billing/manage/download-azure-invoice-daily-usage-date
 
 Configure advanced logging
 
 Implement and configure Azure Monitor insights, including App Insights,
 Networks, Containers \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview
+https://docs.microsoft.com/en-us/azure/azure-monitor/insights/insights-overview
 
 Configure a Log Analytics workspace \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/learn/quick-create-workspace
 
 configure logging for workloads \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/data-platform-logs
 
 Initiate automated responses by using Action Groups \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/action-groups
 
 Configure and manage advanced alerts
 
 Collect alerts and metrics across multiple subscriptions \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/alerts-managing-alert-instances
 
 View Alerts in Azure Monitor logs \
-link
+https://docs.microsoft.com/en-us/azure/azure-monitor/platform/alerts-overview
 
 ---
 
 ### Implement storage accounts
 
 Select storage account options based on a use case \
-link
+https://docs.microsoft.com/en-us/azure/storage/common/storage-account-overview
+https://docs.microsoft.com/en-us/azure/storage/common/storage-introduction
 
 Configure Azure Files and blob storage \
 https://docs.microsoft.com/en-us/azure/storage/files/storage-how-to-create-file-share \
@@ -119,7 +150,8 @@ Configure network access to the storage account \
 https://docs.microsoft.com/en-us/azure/storage/common/storage-network-security
 
 Implement Shared Access Signatures and access policies \
-link
+https://docs.microsoft.com/en-us/rest/api/storageservices/delegate-access-with-shared-access-signature
+https://docs.microsoft.com/en-us/azure/storage/common/storage-sas-overview
 
 Implement Azure AD authentication for storage \
 https://docs.microsoft.com/en-us/azure/storage/common/storage-auth-aad
@@ -132,7 +164,7 @@ https://docs.microsoft.com/en-us/azure/storage/common/storage-redundancy
 
 
 Implement Azure storage account failover \
-link
+https://docs.microsoft.com/en-us/azure/storage/common/storage-initiate-account-failover
 
 ---
 
@@ -141,19 +173,24 @@ Configure High Availability /
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/tutorial-availability-sets
 
 Configure storage for VMs /
-link
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/attach-managed-disk-portal
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/attach-disk-ps
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disks-types
 
 Select virtual machine size /
-link
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes
+https://docs.microsoft.com/en-us/azure/virtual-machines/linux/sizes
 
 Implement Azure Dedicated Hosts /
-link
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/dedicated-hosts-portal
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/dedicated-hosts
 
 Deploy and configure scale sets /
 https://docs.microsoft.com/en-us/azure/virtual-machine-scale-sets/quick-create-portal
 
 Configure Azure Disk Encryption /
-link
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-overview
+https://docs.microsoft.com/en-us/azure/virtual-machines/linux/disk-encryption-overview
 
 ---
 
@@ -165,7 +202,8 @@ Modify Azure Resource Manager template \
 https://docs.microsoft.com/en-us/azure/azure-resource-manager/templates/template-tutorial-create-first-template?tabs=azure-powershell
 
 Evaluate location of new resources \
-link
+https://docs.microsoft.com/en-us/azure/azure-resource-manager/templates/conditional-resource-deployment
+https://docs.microsoft.com/en-us/azure/azure-resource-manager/templates/resource-location
 
 Configure a virtual disk template \
 https://docs.microsoft.com/en-us/azure/marketplace/cloud-partner-portal/virtual-machine/cpp-deploy-json-template
@@ -192,37 +230,45 @@ https://docs.microsoft.com/en-us/azure/virtual-network/virtual-network-manage-pe
 
 ### Implement Azure Active Directory
 Add custom domains \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/fundamentals/add-custom-domain
 
 Configure Azure AD Identity Protection \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/identity-protection/overview-identity-protection
 
 Implement self-service password reset \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/howto-sspr-deployment
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/concept-sspr-howitworks
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/concept-sspr-licensing
 
 Implement Conditional Access including MFA \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/conditional-access/howto-conditional-access-policy-all-users-mfa
+https://docs.microsoft.com/en-us/azure/active-directory/conditional-access/howto-conditional-access-policy-risk
 
 Configure user accounts for MFA \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/tutorial-enable-azure-mfa
 
 Configure fraud alerts \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/howto-mfa-reporting
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/howto-mfa-mfasettings
 
 Configure bypass options \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/authentication/howto-mfa-mfasettings
 
 Configure Trusted IPs \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/reports-monitoring/quickstart-configure-named-locations
+https://docs.microsoft.com/en-us/azure/active-directory/conditional-access/location-condition
 
 Configure verification methods \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/user-help/multi-factor-authentication-end-user-manage-settings
+https://docs.microsoft.com/en-us/azure/active-directory/user-help/multi-factor-authentication-end-user-first-time
 
 Implement and manage guest accounts \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/b2b/what-is-b2b
+https://docs.microsoft.com/en-us/azure/active-directory/governance/manage-guest-access-with-access-reviews
+https://docs.microsoft.com/en-us/azure/active-directory/b2b/b2b-quickstart-add-guest-users-portal
 
 Manage multiple directories \
-link
+https://docs.microsoft.com/en-us/azure/active-directory/users-groups-roles/licensing-directory-independence
 
 ---
 
