fixed some markdown

--- a/content/study_guides/Azure/AZ-303.md
+++ b/content/study_guides/Azure/AZ-303.md
@@ -63,7 +63,7 @@ https://docs.microsoft.com/en-us/learn/certifications/exams/az-303
 
 ---
 
-# The study guide
+# The study guide \
 
 ### Implement and monitor an Azure infrastructure (50-55%)
 ---
@@ -169,26 +169,26 @@ https://docs.microsoft.com/en-us/azure/storage/common/storage-initiate-account-f
 ---
 
 ### Implement VMs for Windows and Linux
-Configure High Availability /
+Configure High Availability \
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/tutorial-availability-sets
 
-Configure storage for VMs /
+Configure storage for VMs \
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/attach-managed-disk-portal
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/attach-disk-ps
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disks-types
 
-Select virtual machine size /
+Select virtual machine size \
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes
 https://docs.microsoft.com/en-us/azure/virtual-machines/linux/sizes
 
-Implement Azure Dedicated Hosts /
+Implement Azure Dedicated Hosts \
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/dedicated-hosts-portal
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/dedicated-hosts
 
-Deploy and configure scale sets /
+Deploy and configure scale sets \
 https://docs.microsoft.com/en-us/azure/virtual-machine-scale-sets/quick-create-portal
 
-Configure Azure Disk Encryption /
+Configure Azure Disk Encryption \
 https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-overview
 https://docs.microsoft.com/en-us/azure/virtual-machines/linux/disk-encryption-overview
 
