fixed markdown issue

--- a/content/study_guides/Azure/AZ-303.md
+++ b/content/study_guides/Azure/AZ-303.md
@@ -63,7 +63,8 @@ https://docs.microsoft.com/en-us/learn/certifications/exams/az-303
 
 ---
 
-# The study guide \
+# The study guide 
+
 
 ### Implement and monitor an Azure infrastructure (50-55%)
 ---
