adding more podcasts and sorting out links

--- a/content/study_guides/Azure/AZ-304.md
+++ b/content/study_guides/Azure/AZ-304.md
@@ -17,11 +17,11 @@ Here is a list of links that you might find useful when studying for your Azure 
 
 ---
 
-Skyline Academy: \
-https://courses.skylinesacademy.com/p/az-301
+**Skyline Academy:**
+#### {{< open-in-blank "https://courses.skylinesacademy.com/p/az-301" "https://courses.skylinesacademy.com/p/az-301" >}}
 
-Scott Duffy:\
-https://www.udemy.com/course/az301-azure/
+**Scott Duffy:**
+#### {{< open-in-blank "https://www.udemy.com/course/az301-azure/" "https://www.udemy.com/course/az301-azure/" >}}
 
 ---
 
@@ -34,8 +34,7 @@ Need links
 ---
 
 ## Exam registration page
-
-https://docs.microsoft.com/en-us/learn/certifications/exams/az-304
+#### {{< open-in-blank "https://docs.microsoft.com/en-us/learn/certifications/exams/az-304" "https://docs.microsoft.com/en-us/learn/certifications/exams/az-304" >}}
 
 ---
 
