--- a/content/study_guides/Azure/AZ-104.md
+++ b/content/study_guides/Azure/AZ-104.md
@@ -14,7 +14,7 @@ weight: 20
 ---
 
 **Skyline Academy:**
-#### {{< open-in-blank "https://courses.skylinesacademy.com/p/az-100" "https://courses.skylinesacademy.com/p/az-100" >}}
+#### {{< open-in-blank "https://courses.skylinesacademy.com/p/az-104" "https://courses.skylinesacademy.com/p/az-104" >}}
 
 **Scott Duffy:**
 #### {{< open-in-blank "https://www.udemy.com/course/70533-azure/" "https://www.udemy.com/course/70533-azure/" >}}
@@ -123,7 +123,7 @@ Below you will find a list of **free** resources from **Microsoft** on their **M
 **Configure resource locks**
 #### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-group-lock-resources" "https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-group-lock-resources" >}}
 
-**Apply tags
+**Apply tags**
 #### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-group-using-tags" "https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-group-using-tags" >}}
 
 **Create and manage resource groups**
@@ -237,10 +237,11 @@ Below you will find a list of **free** resources from **Microsoft** on their **M
 
 ### Create and configure VMs
 
-**#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/move-vm" "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/move-vm" >}}
-Configure Azure Disk Encryption**
-#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-portal-quickstart" "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-portal-quickstart" >}}
+**Configure Azure Disk Encryption**
+#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/move-vm" "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/move-vm" >}}
 
+**Move VMs from one resource group to another**
+#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-portal-quickstart" "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/disk-encryption-portal-quickstart" >}}
 
 **Manage VM sizes**
 #### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes" "https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes" >}}
@@ -441,10 +442,9 @@ Configure Azure Disk Encryption**
 #### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/backup/backup-azure-arm-restore-vms" "https://docs.microsoft.com/en-us/azure/backup/backup-azure-arm-restore-vms" >}}
 
 **Create a Recovery Services Vault**
+#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/backup/backup-create-rs-vault" "https://docs.microsoft.com/en-us/azure/backup/backup-create-rs-vault" >}}
 
 **Use soft delete to recover Azure VMs**
-
-#### {{< open-in-blank "https://docs.microsoft.com/en-us/azure/backup/backup-create-rs-vault" "https://docs.microsoft.com/en-us/azure/backup/backup-create-rs-vault" >}}
 #### {{< open-in-blank "https://azure.microsoft.com/en-in/updates/soft-delete-virtual-machine-backup/" "https://azure.microsoft.com/en-in/updates/soft-delete-virtual-machine-backup/" >}}
 
 **Create and configure backup policy**
