--- a/content/cloud_champions/May2020.md
+++ b/content/cloud_champions/May2020.md
@@ -14,7 +14,7 @@ weight: 3
 ### About
 **Vaibhav Gujral** is a seasoned cloud architect with close to 14 years of experience in designing enterprise-class applications. Born and brought up in India, he completed his Bachelor of Engineering degree in 2006 after which he started his career with Infosys as a software engineer. The first breakthrough in his career came in the year 2010 when he got an opportunity to work closely with Microsoft product teams to onboard new customers onto Microsoft Azure (it was Windows Azure back then). Since then, there has been no looking back and he has been designing and developing cloud-based solutions on Microsoft Azure. 
 
-He has moved to **Omaha**, NE in 2016 with his family for work. He is currently working as a cloud architect at Kiewit Corporation which is one of North America's largest and most respected construction and engineering organization. He is playing a pivotal role in **Kiewit Technology Groups** ongoing digital transformation and is currently responsible for envisioning, creating, and continually improving the cloud platform foundations that development teams build upon. 
+He has moved to **Omaha**, NE in 2016 with his family for work. He is currently working as a cloud architect at Kiewit Corporation which is one of North America's largest and most respected construction and engineering organization. He is playing a pivotal role in **Kiewit Technology Group's** ongoing digital transformation and is currently responsible for envisioning, creating, and continually improving the cloud platform foundations that development teams build upon. 
 
 He is a **Microsoft Certified Azure Solutions Architect Expert** and he holds numerous other Azure Certifications including **Microsoft certified Azure DevOps Engineer Expert, Azure Security Engineer Associate, Azure Administrator Associate, and Azure Developer Associate**.
 
