--- a/content/cloud_champions/May2020.md
+++ b/content/cloud_champions/May2020.md
@@ -33,7 +33,7 @@ Apart from being a regular speaker at both .Net and Azure User Groups, he has wo
 
 Recently, he has organized a half-day virtual live event called **{{< open-in-blank "Global Azure Day 2020 - Omaha" "https://globalazureday.omahaaug.com/" >}}**. He was also one of the speakers in the event. 
 
-He has created the website for the Omaha Azure user group - **https://omahaaug.com/** in December 2019 which he manages till-date. He also manages the user group's twitter handle **@omahaaug** and slack workspace.  
+He has created the website for the Omaha Azure user group - **https://omahaaug.com/** in December 2019 which he manages till-date. He also manages the user group's twitter handle **{{< open-in-blank "@OmahaAUG" "https://twitter.com/OmahaAUG" >}}** and **{{< open-in-blank "slack workspace" "https://omahaaug.slack.com/join/shared_invite/enQtODU2ODU3NTAyMzU5LTlmMzgwOWU3YTM1NjU2MWNkZjc2ODM1MDJiNTk4NDQyNjBlMWYzYjE1OTIzMjhhYzA3MDI4OGVjYjQzNjJhZTQ#/" >}}**.  
 
 He has also been moderating the user group's meetup page since November 2019 which has close to 650 registered members.
 
