--- a/content/cloud_champions/July2020.md
+++ b/content/cloud_champions/July2020.md
@@ -11,7 +11,7 @@ weight: 5
 
 
 ### About
-Mert Yeter is a software engineer with 15 years of experience in .NET and Microsoft technologies. He completed his Bachelor of Engineering in 2005 and has a master’s degree focused on Linux. He has also 3 years of experience in Cisco Contact Centre products and implementations. Mert is very passionate about technology, both software and hardware. He is currently working as a senior software engineer at 360 Dotnet.
+Mert Yeter is a software engineer with 15 years of experience in .NET and Microsoft technologies. He completed his Bachelor of Engineering in 2005 and has a master's degree focused on Linux. He has also 3 years of experience in Cisco Contact Centre products and implementations. Mert is very passionate about technology, both software and hardware. He is currently working as a senior software engineer at 360 Dotnet.
 
 He loves all development related stuff, working on terminal rather than IDEs, teaching and learning. 
  
