--- a/content/cloud_champions/june2021.md
+++ b/content/cloud_champions/june2021.md
@@ -1,4 +1,4 @@
----
+﻿---
 date: 2021-01-16T16:50:16+02:00
 title: Community Champion - June 2021
 menuTitle: June 2021
@@ -41,7 +41,35 @@ After discovering a great tech community on Twitter, Imran had a light bulb mome
 
 Imran has also compiled a list of approximately 100 great Azure related blogs at Azure Blogs | **{{< open-in-blank "AzureCrazy.com" "https://azurecrazy.com/" >}}**
 
-Today, thanks to the tech community, the website has a number of written interviews from Microsoft Azure fans who have shared their experiences including Microsoft employees. The **{{< open-in-blank "@AzureCrazy" "https://twitter.com/AzureCrazy" >}}**  twitter account has over 1500 followers. 
+Today, thanks to the tech community, the website has a number of written interviews from Microsoft Azure fans who have shared their experiences including Microsoft employees. The **{{< open-in-blank "@AzureCrazy" "https://twitter.com/AzureCrazy" >}}**  twitter account has over **1500 followers**. 
+
+
+| |
+|:-------------------------:|
+|![Imran Rashid](/images/champions/Imran2.png) 
+
+**How to Build an Azure Community**
+Imran had a great discussion with **Microsoft MVP Mert Yeter** on how to build an Azure Community, the importance of sharing knowledge, and how to get started with blogging.
+
+
+| |
+|:-------------------------:|
+|![Imran Rashid](/images/champions/Imran3.png) 
+
+**Bradford Cloud User Group**
+
+Imran is a co-founder of the Bradford Cloud User Group which was launched during the Covid-19 Pandemic with co-founders Shabaz Daar and Mohammed Sajid. The aim of the group is to promote Tech in a town located in the UK named Bradford and assist those beginning their tech journey's. 
+
+
+Initially camera shy, the group has also given Imran the opportunity to start speaking in public with his web cam switched on!! 😊
+
+Since the groups launch, the user group has held several live sessions with the support of the tech community including sessions on Azure Stack, VMWare in Azure, Microsoft 365, AWS and more! The group also holds monthly podcast sessions and aims to locate and recognise those individuals who have made a difference including giving new speakers a platform to share their knowledge and boost their confidence.
+
+**The first Bradford Cloud User Group podcast announcement**
+
+| |
+|:-------------------------:|
+|![Imran Rashid](/images/champions/Imran4.png)
 
 
 ### Contact Info 
