--- a/content/cloud_champions/june2021.md
+++ b/content/cloud_champions/june2021.md
@@ -72,8 +72,29 @@ Since the groups launch, the user group has held several live sessions with the 
 |![Imran Rashid](/images/champions/Imran4.png)
 
 
-### Contact Info 
+**The BradCug team were invited to the Azureish Live show. Our first interview as a team.**
+| |
+|:-------------------------:|
+|![Imran Rashid](/images/champions/Imran5.png)
 
+
+### Certifications
+Imran enjoys studying to gain new certification and he also uses the opportunity to blog about what he learns. 
+He has recently started to study and document automating workloads into Azure using Terraform, and has also purchased an **{{< open-in-blank "Azure IOT development kit" "https://microsoft.github.io/azure-iot-developer-kit/docs/get-started/" >}}**.
+
+| |
+|:-------------------------:|
+|![Imran Rashid](/images/champions/Imran6.png)
+
+**Other amazing stuff**
+
+Imran enjoys spending time with his family and travelling to new places. 
+He enjoys playing Snooker from time to time (I'm not a professional before anyone asks!)
+
+### Contact Info 
 
 + **Twitter: {{< open-in-blank "@ITSupportBlog" "https://twitter.com/ITSupportBlog" >}}** 
 + **Website: {{< open-in-blank "AzureCrazy.com" "https://azurecrazy.com/" >}}**
++ **Azure Crazy Twitter: {{< open-in-blank "@AzureCrazy" "https://twitter.com/AzureCrazy" >}}** 
+
+Happy to help, so please feel free to reach out.
