--- a/content/cloud_champions/July2021.md
+++ b/content/cloud_champions/July2021.md
@@ -63,5 +63,5 @@ Outside of 24/7 IT and Twitter, I enjoy Photography and Engineering and most ban
 + **Twitter - {{< open-in-blank "https://twitter.com/smoon_lee" "https://twitter.com/smoon_lee" >}}**
 + **Blog - {{< open-in-blank "https://hypervlab.co.uk" "https://hypervlab.co.uk" >}}**
 + **LinkedIn - {{< open-in-blank "https://www.linkedin.com/in/simon-john-lee/" "https://www.linkedin.com/in/simon-john-lee/" >}}**
-+ **YouTube - {{< open-in-blank "https://youtube.com/hypervlab" "https://youtube.com/hypervlab" >}}** - **(Currently a work in progress)**
++ **YouTube - {{< open-in-blank "https://www.youtube.com/channel/UCGeAnznj4LHJjpFpgkBdNWA" "https://www.youtube.com/channel/UCGeAnznj4LHJjpFpgkBdNWA" >}}** - **(Currently a work in progress)**
 + **GitHub - {{< open-in-blank "https://github.com/smoonlee" "https://github.com/smoonlee" >}}**
