--- a/content/cloud_champions/July2021.md
+++ b/content/cloud_champions/July2021.md
@@ -7,7 +7,7 @@ weight: 18
 
 | |
 |:-------------------------:|
-|[![Simon Lee](/images/champions/simon.jpg?width=20pc)](https://twitter.com/smoon_lee "@smoon_lee") [**Simon Lee** - @smoon_lee](https://twitter.com/smoon_lee)|
+|[![Simon Lee](/images/champions/simon.jpg)](https://twitter.com/smoon_lee "@smoon_lee") [**Simon Lee** - @smoon_lee](https://twitter.com/smoon_lee)|
 
 
 ### About
@@ -25,7 +25,7 @@ This also currently hosts the HypervLAB Blog, Which is built on a Ubuntu 21.04.0
 
 | |
 |:-------------------------:|
-|![Simon Lee](/images/champions/MiniDatacenter.jpg) Simons home Lab! 
+|![Simon Lee](/images/champions/MiniDatacenter.jpg?height=50pc) Simons home Lab! 
 ---
 
 
