--- a/content/cloud_champions/July2021.md
+++ b/content/cloud_champions/July2021.md
@@ -25,7 +25,7 @@ This also currently hosts the HypervLAB Blog, Which is built on a Ubuntu 21.04.0
 
 | |
 |:-------------------------:|
-|![Simon Lee](/images/champions/MiniDatacenter.jpg?height=50pc) Simons home Lab! 
+|![Simon Lee](/images/champions/MiniDatacenter.jpg) Simons home Lab! 
 ---
 
 
